--- a/source/Files/App_Config/Include/zADM/AnalyticsDatabaseManager.config
+++ b/source/Files/App_Config/Include/zADM/AnalyticsDatabaseManager.config
@@ -30,21 +30,178 @@
         spider
         monitor
         ForwardSearch
+        boitho.com-dc
+        Mediapartners-Google
+        PhantomJS
       </robotNameParts>
 		  <robotUserAgents>
-			  Tango/04 Web ThinAgent
-			  Mozilla/5.0 (compatible; WAPT Pro; Windows)
-			  Xenu Link Sleuth/1.3.8
-			  Google favicon
-			  SSL Labs (https://www.ssllabs.com/about/assessment.html)
-			  Zabbix
-			  facebookexternalhit/1.1 (+http://www.facebook.com/externalhit_uatext.php)
-			  AddThis.com (http://support.addthis.com/
-			  facebookexternalhit/1.1
-			  Mediapartners-Google
-			  Pinterest/0.2 (+http://www.pinterest.com/)
-			  YahooCacheSystem; YahooWebServiceClient
-		  </robotUserAgents>
+        (Teradex Mapper; mapper@teradex.com; http://www.teradex.com)
+        AddThis.com (http://support.addthis.com/
+        AnswerBus (http://www.answerbus.com/)
+        Ant.com/1.0 (Crawling antmarks; https://www.ant.com; admin@ant.com)
+        appie 1.1 (www.walhello.com)
+        asterias/2.0
+        Bilbo
+        Blaiz-Bee/2.00.953 (+http://www.blaiz.net)
+        Bumblebee@relevare.com
+        CrawlConvera0.1 CrawlConvera@yahoo.com
+        curl/7.9.1 (win32) libcurl 7.9.1
+        dcrawl/1.0
+        DeepIndex
+        DeepIndex (www.deepindex.com)
+        -DIE-KRAEHE- META-SEARCH-ENGINE/1.0 http://www.die-kraehe.com
+        DoCoMo/2.0+SH901iC(c100;TB;W24H12)
+        exactseek.com
+        Exalead NG/MimeLive Client (convert/http/0.120)
+        facebookexternalhit/1.1
+        facebookexternalhit/1.1 (+http://www.facebook.com/externalhit_uatext.php)
+        FAST Data Search Document Retriever/4.0 04072100 2004-07-21 07:54:10 UTC
+        Firefly/1.0 (compatible; Mozilla 4.0; MSIE 5.5)
+        flunky
+        Foelock.co.uk Search MyGo R2-H6-3
+        Foelock.co.uk Search MyGo Uknow 7
+        gazz/5.0 (gazz@nttr.co.jp)
+        GoForIt.com
+        Google favicon
+        Helix/1.2 (+http://www.sitesearch.ca/helix/)
+        holmes/3.9 (OnetSzukaj/5.0; +http://szukaj.onet.pl)
+        http://www.sygol.com
+        HubPages V0.2.2 (http://hubpages.com/help/crawlingpolicy)
+        ia_archiver
+        IErachnid 3.0 http://uk.searchengineeurope.com
+        Infoseek SideWinder/2.0B (Linux 2.4 i686)
+        Insitor.com, search and find world wide!
+        larbin
+        larbin (or some variations on larbin)
+        libwww-perl/5.45
+        libwww-perl/5.47
+        LinkWalker
+        Load Balancer Agent
+        Look.com
+        lwp-trivial/1.34
+        Mackster( http://www.ukwizz.com )
+        MarkWatch/1.0
+        Marvin v0.3
+        MaSagool/1.0 (MaSagool; http://sagool.jp/; masagool@sagool.jp)
+        Metager2 (http://metager2.de/site/webmaster.php)
+        Metaspinner/0.01 (Metaspinner; http://www.meta-spinner.de/; support@meta-spinner.de/)
+        Microsoft URL Control - 5.01.4319
+        Mozilla/2.0 (compatible; Ask Jeeves/Teoma; +http://sp.ask.com/docs/about/tech_crawling.html)
+        Mozilla/2.0 (compatible; AskJeeves/Teoma)
+        Mozilla/3.0 (compatible; Indy Library)
+        Mozilla/4.0
+        Mozilla/4.0 (agadine3.0) www.agada.de
+        Mozilla/4.0 (cloakBrowser)
+        Mozilla/4.0 (compatible; grub-client-1.2.1; Crawl your own stuff with http://grub.org)
+        Mozilla/4.0 (compatible; MSIE 5.0; Windows NT)
+        Mozilla/4.0 (compatible; MSIE 5.01; Windows NT 5.0)
+        Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; PrassoSunner 1.00; http://www.prasso.com;)
+        Mozilla/4.0 (compatible; MSIE 8.0; Windows NT 6.1; GTMProbe 1.0)
+        Mozilla/4.0 (compatible; T-H-U-N-D-E-R-S-T-O-N-E)
+        Mozilla/4.0 (fantomBrowser)
+        Mozilla/4.0 (fantomCrew Browser)
+        Mozilla/4.0 (JemmaTheTourist;http://www.activtourist.com)
+        Mozilla/4.0 (stealthBrowser)
+        Mozilla/4.05
+        Mozilla/4.05 [en]
+        Mozilla/4.7
+        Mozilla/4.7 (compatible; Intelliseek; http://www.intelliseek.com)
+        Mozilla/5.0 (compatible; Ask Jeeves/Teoma; +http://about.ask.com/en/docs/about/webmasters.shtml)
+        Mozilla/5.0 (compatible; Charlotte/1.1; http://www.searchme.com/support/)
+        Mozilla/5.0 (compatible; CrawlForMe/3.0.2; +info@crawlforme.com)
+        Mozilla/5.0 (compatible; Konqueror/3.4; Linux) KHTML/3.4.1 (like Gecko)
+        Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.1; Trident/6.0) SiteCheck-sitecrawl by Siteimprove.com
+        Mozilla/5.0 (compatible; Najdi.si/3.1)
+        Mozilla/5.0 (compatible; OnetSzukaj/5.0; +http://szukaj.onet.pl)
+        Mozilla/5.0 (compatible; Page2RSS/0.5; +http://page2rss.com/)
+        Mozilla/5.0 (compatible; Qwantify/2.4w; +https://www.qwant.com/)/2.4w
+        Mozilla/5.0 (compatible; uCrawlr/1.0 ; +https://blog.ucoz.ru/upolicy)
+        Mozilla/5.0 (compatible; WAPT Pro; Windows)
+        Mozilla/5.0 (compatible; worldwebheritage.org/1.1; +crawl@worldwebheritage.org)
+        Mozilla/5.0 (compatible; Yahoo! DE Slurp; http://help.yahoo.com/help/us/ysearch/slurp)
+        Mozilla/5.0 (compatible; Yahoo! Slurp China; http://misc.yahoo.com.cn/help.html)
+        Mozilla/5.0 (compatible; Yahoo! Slurp/3.0; http://help.yahoo.com/help/us/ysearch/slurp)
+        Mozilla/5.0 (compatible; Yahoo! Slurp; http://help.yahoo.com/help/us/ysearch/slurp)
+        Mozilla/5.0 (Slurp/cat; slurp@inktomi.com; http://www.inktomi.com/slurp.html)
+        Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.100 Safari/537.36 AppEngine-Google; (+http://code.google.com/appengine; appid: s~optimizelyedit-hrd)
+        Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.91 Safari/537.36 AppEngine-Google; (+http://code.google.com/appengine; appid: s~optimizelyedit-hrd)
+        Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.113 Safari/537.36 AppEngine-Google; (+http://code.google.com/appengine; appid: s~optimizelyedit-hrd)
+        Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.100 Safari/537.36 AppEngine-Google; (+http://code.google.com/appengine; appid: s~optimizelyedit-hrd)
+        Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/534+ (KHTML, like Gecko) BingPreview/1.0b
+        Mozilla/5.0 wgao@genieknows.com
+        MSIE (MSIE 5.23; Mac_PowerPC)
+        MSIE 6.0
+        multiBlocker browser
+        multiBlocker browser - IP blocker for Spam, Fraud + Snoop Protection
+        NAMEPROTECT
+        NetMechanic V2.0
+        NetResearchServer(http://www.look.com)
+        NG/2.0
+        Nutch
+        Onet.pl SA, http://szukaj.onet.pl
+        ozilla/4.7 (compatible; Whizbang)
+        Panopta v1.1
+        PHPCrawl
+        PicaLoader 1.0
+        Pinterest/0.2 (+http://www.pinterest.com/)
+        Pompos/1.3 http://dir.com/pompos.html
+        Pop.gr/6.1 Arachne(compatible; MSIE 6.0; Windows 98; Corus)
+        Pulsepoint XT3 web scraper
+        QCrawl
+        Reaper [2.03.10-031204] (http://www.sitesearch.ca/reaper/)
+        RoboCrawl (www.canadiancontent.net)
+        Robozilla/1.0
+        RPT-HTTPClient/0.3-3
+        Scooter/3.3
+        Scooter/3.3Y!CrawlX
+        ScoutAbout
+        Scrubby/2.1 (http://www.scrubtheweb.com/abs/meta-check.html)
+        Scrubby/2.2 (http://www.scrubtheweb.com/)
+        search.ch V1.4.2 (http://www.search.ch)
+        SearchSight/2.0 (http://SearchSight.com/)
+        Seeker.lookseek.com
+        Semager/1.0 (http://www.semager.de)
+        sitecheck.internetseer.com
+        slurp
+        SlySearch
+        sohu agent
+        sohu-search
+        Sqworm/2.9.72-BETA (beta_release; 20010821-737; i686-pc-linux-gnu)
+        SSL Labs (https://www.ssllabs.com/about/assessment.html)
+        StackRambler/2.0 (MSIE incompatible)
+        Tango/04 Web ThinAgent
+        Teleport Pro/1.28
+        teoma_agent1
+        T-H-U-N-D-E-R-S-T-O-N-E
+        TygoProwler (http://www.tygo.com/)
+        uk-Searcher(HTTP://WWW.UK-SEARCHER.CO.UK)
+        uksearchpages.co.uk
+        Validator.nu/LV http://validator.w3.org/services
+        voyager/1.0
+        Webclipping.com
+        webcrawl.net
+        WebGather 3.0
+        WebIndexer/1-dev (Web Indexer; mailto://webindexerv1@yahoo.com; webindexerv1@yahoo.com)
+        webrank
+        webrover/0.1 (+http://www.webrover.de)
+        WebSearch.COM.AU/3.0.1 (The Australian Search Engine; http://WebSearch.COM.AU; Search@WebSearch.COM.AU)
+        WorldLight
+        www.proodle.com
+        wwwster/1.4 (Beta, mailto:gue@cis.uni-muenchen.de)
+        Xenu Link Sleuth/1.3.8
+        xirq/0.1-dev (xirq; http://www.xirq.com; xirq@xirq.com)
+        Y!J-BSC/1.0 (http://help.yahoo.co.jp/help/jp/blog-search/)
+        Yahoo! Mindset
+        Yahoo-Blogs/v3.9 (compatible; Mozilla 4.0; MSIE 5.5; http://help.yahoo.com/help/us/ysearch/crawling/crawling-02.html )
+        YahooCacheSystem; YahooWebServiceClient
+        YahooFeedSeeker/1.0 (compatible; Mozilla 4.0; MSIE 5.5; my.yahoo.com/s/publishers.html)
+        YahooSeeker-Testing/v3.9 (compatible; Mozilla 4.0; MSIE 5.5; http://search.yahoo.com/)
+        YahooVideoSearch www.yahoo.com/
+        YahooWebServiceClient
+        YahooYSMcm/2.0.0
+        Zabbix
+        Zeus 60359 Webster Pro V2.9 Win32
+      </robotUserAgents>
     </analyticsDatabaseManager>
 
     <settings>
