Force dateformat output

--- a/source/Files/App_Config/Include/zADM/AnalyticsDatabaseManager.config
+++ b/source/Files/App_Config/Include/zADM/AnalyticsDatabaseManager.config
@@ -71,6 +71,7 @@
         IErachnid 3.0 http://uk.searchengineeurope.com
         Infoseek SideWinder/2.0B (Linux 2.4 i686)
         Insitor.com, search and find world wide!
+        KickFire
         larbin
         larbin (or some variations on larbin)
         libwww-perl/5.45
